icon changed and layout problems fixed

--- a/RedResQ_WebApp/Shared/MainLayout.razor.css
+++ b/RedResQ_WebApp/Shared/MainLayout.razor.css
@@ -68,4 +68,16 @@ main {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
+
+    main {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    #content {
+        width: calc(100% - 250px);
+        float: right;
+        display: block;
+    }
 }
